# mcp-security-platform

./: .env.example  .env.lab.example  .gitignore  .gitleaks.toml  .grype.yaml  .pre-commit-config.yaml  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  INSTALL.md  LAB.md  LICENSE  Makefile  Makefile.lab  NOTICE  README.md  SECURITY.md  compose.engine.yml  compose.logging-agent.yml  compose.poc.yml  compose.standard.yml  compose.wazuh.yml  docker-compose.dev.yml  docker-compose.opa-signed.yml  docker-compose.override.yml.example  docker-compose.yml  lab.config.example  mcps.yaml  podman-compose.lab.yml  scan-config.yaml  skills-lock.json
.github/: dependabot.yml
observability/mcp-audit-logger/: pyproject.toml
observability/mcp-audit-logger/mcp_audit_logger/: __init__.py  hasher.py  logger.py  redaction.py  schema.py
observability/mcp-audit-logger/tests/: test_redaction.py
proxy/: Dockerfile  pyproject.toml  requirements-dev.txt  requirements.txt  scan-config.yaml
proxy/app/: main.py
proxy/app/cli/: sbom_verify.py
proxy/app/core/: asyncpg_pool.py  config.py  database.py  hardening.py  log_filter.py  public_url.py  redis_atomic.py  redis_client.py  security.py
proxy/app/credential_broker/: broker.py  dispatcher.py  factory.py  keycloak_client.py  kms.py  models.py  principal_resolution.py  registry.py  session.py  token_assert.py
proxy/app/credential_broker/adapters/: base.py  bitbucket.py  dex.py  dynamic_external_oauth.py  generic_oauth.py  generic_service_adapter.py  gitea.py  grafana.py  healthcheck.py  jira.py  m365.py  netbox.py  registry.py  service_adapter.py  service_adapter_registry.py
proxy/app/credential_broker/approaches/: approach_a.py  approach_b.py
proxy/app/middleware/: audit.py  auth.py  ingress.py  rbac.py
proxy/app/models/: anomaly.py  api_key.py  audit_event.py  compliance.py  tool.py
proxy/app/routers/: admin_credentials.py  admin_git.py  admin_grants.py  admin_limits.py  admin_llm.py  admin_ops.py  admin_prompts.py  anomaly.py  audit.py  auth.py  catalog.py  compliance.py  entitlements.py  health.py  integrations.py  lab_links.py  mcp_server.py  metrics.py  oauth.py  oauth_metadata.py  oauth_provider_profiles.py  oidc_browser.py  policy.py  portal.py  profiles.py  server_registry.py  submission.py  tools.py
proxy/app/services/: admin_audit.py  anomaly.py  artifact_provenance.py  auditor.py  auth_modes.py  build_evaluator.py  c2pa.py  compliance.py  consent.py  content_class.py  contract_check.py  credential_storage.py  custody.py  dependency_policy.py  deploy_launcher.py  deploy_verifier.py  entitlement.py  git_providers.py  injection_patterns.py  invocation.py  jcs.py  layer_b.py  limits.py  llm_config.py  mcp-server-contract.schema.json  metrics.py  oauth_policy.py  oauth_provider_profile.py  opa_data_sync.py  pinned_transport.py  platform_secrets.py  policy.py  prompt_store.py  rescan_scheduler.py  response_filter.py  same_idp_verify.py  sbom.py  scaffold_generator.py  scan_evaluator.py  scan_queue.py  (+13 more)
proxy/app/static/: design.html
proxy/config/: content-class-registry.json
proxy/tests/: conftest.py
proxy/tests/fixtures/: integration_seed.sql
proxy/tests/integration/: conftest.py  test_admin_limits.py  test_audit_completeness.py  test_auth_flows.py  test_db_migrate.py  test_grants_sync_mutation_integration.py  test_invocation_audit.py  test_invoke.py  test_mcp_server_chain.py  test_oauth_pkce_flow.py  test_onboarding_e2e_mode_a.py  test_onboarding_e2e_mode_b_c_d.py  test_onboarding_real_e2e.py  test_opa_bundle_with_grants.py  test_opa_deny_by_default.py  test_rbac.py  test_registration_endpoint.py  test_registry_migration.py  test_scanner_worker_db_role.py  test_server_scoped_enrollment.py  test_taint_floor_invoke.py
proxy/tests/performance/: test_throughput.py
proxy/tests/rfc0002/: README.md  STATUS.md  __init__.py  _pki.py  conftest.py  gen_status.py  spec_oracle.py  test_appendix_b_vectors.py  test_gateway_conformance.py  test_gateway_parity.py  test_redteam_regression.py  test_scenarios_oracle.py  test_substrate_rfc0001.py
proxy/tests/security/: conftest.py  test_ai_attacks.py  test_response_filter_corpus.py  test_sandbox_escape.py  test_signed_bundle.py
proxy/tests/unit/: conftest.py  test_adapter_healthcheck.py  test_anomaly_detector.py  test_anomaly_no_dead_baseline.py  test_anomaly_rego_wire.py  test_appsec_review_6_findings.py  test_audit_auth_failure.py  test_audit_who_fields.py  test_auditor.py  test_auditor_llm_token_si6.py  test_auditor_param_descriptions.py  test_auditor_scan_floor.py  test_auditor_unavailable.py  test_auth_middleware.py  test_auth_modes.py  test_auth_modes_doc_current.py  test_build_evaluator.py  test_catalog_router.py  test_config_broker.py  test_config_staging_parity.py  test_config_token_exchange.py  test_connection_health_tracking.py  test_consent_token.py  test_contract_check.py  test_credential_storage.py  test_custody.py  test_dependency_policy.py  test_deploy_launcher.py  test_deploy_verifier.py  test_discover_tools.py  test_dispatcher_basic_auth.py  test_dispatcher_external_oauth.py  test_dispatcher_fail_closed.py  test_dispatcher_modes.py  test_dispatcher_principal_dual_read.py  test_dispatcher_server_default.py  test_dispatcher_service_account_scope.py  test_dispatcher_uses_registry.py  test_dynamic_external_oauth.py  test_enrollment_consent_gate.py  (+99 more)
proxy/tests/unit/credential_broker/: test_adapter_registry.py  test_approach_a.py  test_approach_b.py  test_bitbucket.py  test_broker.py  test_dex.py  test_entra_client_credentials_vault.py  test_factory.py  test_grafana.py  test_healthcheck_pinning.py  test_kms.py  test_m365.py  test_master_secret_ttl.py  test_models.py  test_netbox.py  test_principal_resolution.py  test_registry.py  test_session.py
proxy/tests/unit/middleware/: test_auth_profile_bearer.py
proxy/tests/unit/routers/: test_admin_ops.py
sdk/mcphub-sdk/: Dockerfile.base  pyproject.toml
sdk/mcphub-sdk/mcphub_sdk/: __init__.py  __main__.py  context.py  scaffold.py  server.py
sdk/mcphub-sdk/tests/: test_context.py  test_scaffold.py  test_server.py
(+586 files in other folders)
