[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-security-proxy"
version = "1.0.0"
description = "MCP Security Platform — Security Proxy"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }

dependencies = [
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.4.0",

    # Database
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.30.0",       # Async PostgreSQL driver
    "alembic>=1.13.0",

    # Redis
    "redis[asyncio]>=5.1.0",

    # HTTP client (for OPA, Ollama, upstream MCP servers)
    "httpx>=0.27.0",

    # SBOM generation
    "cyclonedx-python-lib>=7.0.0",

    # Web framework — starlette pinned to fix PYSEC-2026-161 Host header auth bypass
    "starlette>=1.0.1",

    # Security
    "cryptography>=43.0.0",
    "PyJWT[crypto]>=2.8.0",              # JWT / OIDC — replaces python-jose (unmaintained, CVE: algorithm confusion, DoS, non-constant-time HMAC)
    "idna>=3.15",                         # CVE-2026-45409 ReDoS (transitive via httpx/anyio — pinned explicitly)

    # Configuration
    "pyyaml>=6.0",

    # Utilities
    "structlog>=24.0.0",
    "tenacity>=9.0.0",       # Retry logic for OPA/Ollama calls

    # Internal
    "mcp-audit-logger",      # From observability/mcp-audit-logger (local package)
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",         # TestClient
    "ruff>=0.7.0",
    "mypy>=1.12.0",
    "factory-boy>=3.3.0",
    "freezegun>=1.5.0",
]

[tool.hatch.build.targets.wheel]
# The app package lives in the app/ subdirectory; tell hatchling where to find it.
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: marks tests as integration tests (require running services)",
    "unit: marks tests as unit tests (no external dependencies)",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "S", "B", "A", "C4", "DTZ", "T20", "RET", "SIM"]
ignore = ["S101"]  # Allow assert in tests

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
