[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-security-proxy"
version = "1.0.0"
description = "MCP Security Platform — Security Proxy"
requires-python = ">=3.12"
license = { text = "MIT" }

dependencies = [
    # Web framework
    "fastapi==0.115.12",
    "uvicorn[standard]==0.34.3",
    "python-multipart==0.0.32",          # FastAPI Form() — R-5 consent POST (oauth.py enroll_consent)
    "pydantic==2.11.5",
    "pydantic-settings==2.9.1",

    # Database
    "sqlalchemy==2.0.41",
    "asyncpg==0.30.0",       # Async PostgreSQL driver
    "alembic==1.15.2",

    # Redis
    "redis[asyncio]==5.2.1",

    # HTTP client (for OPA, Ollama, upstream MCP servers)
    "httpx==0.28.1",

    # SBOM generation
    "cyclonedx-python-lib==7.6.1",

    # Web framework — starlette pinned to fix PYSEC-2026-161 Host header auth bypass
    "starlette==0.46.2",

    # Security
    "cryptography==44.0.3",
    "PyJWT[crypto]==2.10.1",              # JWT / OIDC — replaces python-jose (unmaintained, CVE: algorithm confusion, DoS, non-constant-time HMAC)
    "idna==3.10",                          # CVE-2026-45409 ReDoS (transitive via httpx/anyio — pinned explicitly)
    "ecdsa==0.19.0",                       # GHSA-wj6h-64fc-37mp Minerva timing attack on P-256 (transitive via cyclonedx-python-lib — pinned explicitly)

    # Configuration
    "pyyaml==6.0.2",

    # Utilities
    "structlog==24.4.0",
    "prometheus-client==0.21.1",  # CR-17 / WP-D1: GET /metrics
    "tenacity==9.1.2",       # Retry logic for OPA/Ollama calls
    "jcs==0.1.0",            # RFC 8785 JSON Canonicalization Scheme — trust envelope signing
    "jsonschema==4.26.0",    # CR-06 (WP-B3 phase 6) — validates initialize/tools-list shape against mcp-server-contract.schema.json

    # NOTE (CR-14 / WP-B1): pip-audit used to live here for the in-proxy
    # scanner pipeline (PRD-0003 R-0). Scanner execution has moved to the
    # isolated scanner-worker service (scanner_worker/requirements.txt) — the
    # proxy no longer needs a scanner binary of any kind.

    # Internal
    "mcp-audit-logger",      # From observability/mcp-audit-logger (local package)
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.5",
    "pytest-asyncio==0.24.0",
    "pytest-cov==5.0.0",
    "httpx==0.28.1",         # TestClient
    "ruff==0.11.13",
    "mypy==1.15.0",
    "factory-boy==3.3.3",
    "freezegun==1.5.5",
]

[tool.hatch.build.targets.wheel]
# The app package lives in the app/ subdirectory; tell hatchling where to find it.
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: marks tests as integration tests (require running services)",
    "unit: marks tests as unit tests (no external dependencies)",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "S", "B", "A", "C4", "DTZ", "T20", "RET", "SIM"]
ignore = ["S101"]  # Allow assert in tests

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
