[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcphub-sdk"
version = "0.1.0"
description = "MCP-Server Integration SDK for the MCP Security Platform"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.8.0",
    "uvicorn>=0.30.0",
    "httpx>=0.27.0",
    "starlette>=0.37.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
]

[tool.hatch.build.targets.wheel]
packages = ["mcphub_sdk"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
